--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -104,7 +104,7 @@
           {% if obj.link %}
             <a target="_blank" href="{{obj.link}}">
           {% else %}
-            <a target="_blank" href="/assets/img/{{obj.obj}}">
+            <a target="_blank" href="/assets/img/{{obj.image}}">
           {% endif %}
           {% if obj.type == 'video' %}
           <video width="850" controls>
