sam checking in some work

--- a/_includes/key.html
+++ b/_includes/key.html
@@ -10,7 +10,7 @@
     <span class="pixel hardware"></span> hardware
   </li>
   <li class="tags-key">
-    <span class="pixel pm"></span> pm
+    <span class="pixel pm"></span> project managing
   </li>
   <li class="tags-key">
     <span class="pixel ads"></span> ads
