--- a/_sass/recordings.scss
+++ b/_sass/recordings.scss
@@ -1,15 +1,14 @@
 /* pastels */
-$color-pink: #f2e1ff;
+$color-pink: #e1f6ff;
 $color-purplish: #d4dfff;
-$color-blue-light: #deface;
-$color-greenish: #deeded;
-$color-yellowish: #effec7;
+$color-blue-light: #ceebfa;
+$color-greenish: #d7e2ff;
+$color-yellowish: #c7f1fe;
 
 // recordings
 .recording.list-inline-item {
   width: 100px;
   height: 100px;
-  margin: 2px;
   cursor: pointer;
   text-decoration: none;
   -webkit-transition: all 0.5s;
