--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <a href="#" class="d-sm-inline d-md-none h5" style="color: blue;" id="menu">&#8592; menu</a>
+  <a href="#" class="d-sm-inline d-md-none h5" id="menu">&#8592; menu</a>
   <p class="d-md-none site-description">
     {{ site.description | default: site.github.project_tagline }}
   </p>
