--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,10 @@
 <ul>
   <li>
-    <a href="{{ site.url }}" id="mark">&#8704;</a>
+    <a href="/" id="mark">&#8704;</a>
     <a href="#" class="d-sm-inline d-md-none float-right h5"
        id="exit-menu" style="color: blue;">close &#8594;</a>
   </li>
-  <li class="d-xs-none d-sm-none d-md-inline site-description">
+  <li class="d-xs-none d-sm-none d-md-block site-description">
     {{ site.description | default: site.github.project_tagline }}
   </li>
   {% for page in site.pages %}
