--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -20,13 +20,19 @@
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  {% if page.script %}
+  <script src="{{ '/assets/js/' | append: page.script }}"></script>
+  {% endif %}
   <title>A stream of projects and thoughts</title>
 </head>
 <body>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12">
+    <div class="col-11">
       {% include header.html %}
+    </div>
+    <div class="col-1">
+      {% include lightmode.html %}
     </div>
   </div>
   <div class="row">
@@ -99,27 +105,39 @@
       {% endif %}
 
       <ul class="project-list">
-          {% for obj in page.media %}
+        {% for obj in page.media %}
         <li>
           {% if obj.link %}
-            <a target="_blank" href="{{obj.link}}">
-          {% else %}
+          <a target="_blank" href="{{obj.link}}">
+            {% else %}
             <a target="_blank" href="/assets/img/{{obj.image}}">
-          {% endif %}
-          {% if obj.type == 'video' %}
-          <video width="850" controls>
-            <source src="/assets/img/{{ obj.video }}" type="video/mp4">
-          </video>
-          {% else %}
-          {{image}}
+              {% endif %}
+              {% if obj.type == 'video' %}
+              <video width="850" controls>
+                <source src="/assets/img/{{ obj.video }}" type="video/mp4">
+              </video>
+              {% else %}
               <img src="/assets/img/{{obj.image}}" class="{{obj.class}}"/>
-          {% endif %}
-          </a>
-          <label class="image-description">{{ obj.desc }}</label>
+              {% endif %}
+            </a>
+            <label class="image-description">{{ obj.desc }}</label>
         </li>
         {% endfor %}
       </ul>
+      {% if page.recordings %}
 
+      <ul class="list-inline recordings-list">
+        {% for rec in page.recordings %}
+        <li class="recording list-inline-item" id="recording-{{ rec.date | replace: '/', '-' }}"
+            data-date="{{rec.date}}" title="{{rec.desc}}">
+          <audio>
+            <source src="/assets/sound/{{rec.src}}">
+          </audio>
+          <div class="recording-date">{{ rec.date }}</div>
+        </li>
+        {% endfor %}
+      </ul>
+      {% endif %}
       {% if page.carousel_1 %}
 
       <div id="carouselExampleControls2" class="carousel slide" data-interval="false">
@@ -149,12 +167,11 @@
         {{page.carousel_1_desc}}
       </div>
       {% endif %}
-
-
       {% endif %}
 
     </main>
   </div>
 </div>
 </body>
+
 </html>
