--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,7 @@
 $color-black: #2f2f2f;
 $color-gray: #777;
 $color-yellow: #fffa96;
-$color-blue: #2929fa;
+$color-blue: #002aff;
 $color-light-blue: #007bff;
 $color-red: orangered;
 
@@ -50,14 +50,20 @@ li {
 
 a {
   color: $color-blue;
+  text-decoration: underline;
 
   &:hover, &:focus, &:active {
     color: $color-blue;
     font-weight: 700;
     text-decoration: underline;
     font-style: italic;
+  }
 
-    //padding-bottom: 3px;
+}
+
+.project-links {
+  a {
+    text-decoration: none;
   }
 }
 
@@ -75,6 +81,8 @@ li > img, li > a > img {
   padding: .1em .4em;
   font-size: 1em;
   color: $color-black;
+  text-decoration: none;
+
   &:hover, &:focus, &:active {
     text-decoration: none;
     background-color: $color-blue;
@@ -85,7 +93,6 @@ li > img, li > a > img {
 }
 
 #menu {
-  transition: all 0.3s;
   font-size: .8em;
 }
 
@@ -96,9 +103,17 @@ li > img, li > a > img {
   top: 0;
 }
 
+#mode-switch {
+  cursor: pointer;
+  z-index: 999;
+  position: relative;
+  float: right;
+  margin-top: 1em;
+}
+
 #sidebar {
   overflow-y: scroll;
-  padding-top: 1em;
+  padding-top: 0.5em;
   padding-left: 1em;
   padding-right: 1em;
   transition: all 0.3s;
@@ -107,6 +122,7 @@ li > img, li > a > img {
   position: fixed;
   height: 100vh;
   width: 250px;
+  top: 1em;
   @include media-breakpoint-down(sm) {
     margin-left: -250px;
     margin-top: 0;
@@ -168,13 +184,23 @@ img {
 .site-description {
   color: $color-gray;
   font-size: 0.8em;
-  margin-bottom: 0.8em;
+  margin-bottom: 1.8em;
 }
 
 #sidebar {
   .site-description {
     @include media-breakpoint-down(md) {
       display: none;
+    }
+  }
+
+  .project {
+    a {
+      text-decoration: none;
+
+      &:hover, &:active, &:focus {
+        text-decoration: underline;
+      }
     }
   }
 }
@@ -200,8 +226,13 @@ img {
   max-width: 850px;
 }
 
+li.list-item.page {
+  color: $color-blue;
+}
+
 li.list-item.page > a {
   color: $color-gray;
+  text-decoration: none;
 }
 
 .carousel-control-next,
@@ -279,3 +310,76 @@ ul.liltalks {
   }
 }
 
+
+body.dark-mode {
+  background: #262626;
+  color: #e1e1e1;
+
+  #sidebar {
+    background: #262626;
+    color: #e1e1e1;
+  }
+
+  p {
+    color: white;
+  }
+
+  a {
+    color: #ffdadf;
+
+    &:hover, &:active, &:focus {
+      color: #ff4dae;
+    }
+  }
+
+  #mark {
+    border-color: #e1e1e1;
+    color: #e1e1e1;
+
+    &:hover, &:active, &:focus {
+      border-color: #ff4dae;
+      background: #ff4dae;
+      color: #262626;
+    }
+  }
+
+  li.list-item.page {
+    color: #ff4dae;
+  }
+
+  .site-description {
+    color: #e1e1e1;
+  }
+
+  ul.tags-key {
+    li {
+      color: #b5b5b5 !important;
+    }
+  }
+
+  .pixel {
+    &.black, &.pm {
+      background-color: white;
+    }
+
+    &.blue, &.design {
+      background-color: #ffbc31;
+    }
+  }
+
+  img {
+    &.border {
+      border: 1px solid #cfcfcf;
+    }
+  }
+
+  #mode-switch {
+    a {
+      color: #e1e1e1;
+
+      &:hover, &:active, &:focus {
+      }
+    }
+  }
+
+}
