--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="" id="sidebar">
+    <div class="active" id="sidebar">
       {% include nav.html %}
       {% include key.html %}
     </div>
