--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,13 @@
 <ul>
-  <li>
-    <a href="/" id="mark">&#8704;</a>
+  <li class="d-sm-inline d-md-none float-right h5">
+<!--    <a href="/" id="mark">&#8704;</a>-->
     <a href="#" class="d-sm-inline d-md-none float-right h5"
        id="exit-menu">close &#8594;</a>
   </li>
   <li class="d-xs-none d-sm-none d-md-block site-description">
-    {{ site.description | default: site.github.project_tagline }}
+    {{ site.description | default: site.github.project_tagline }}'s
+    <br/>
+    projects & thoughts
   </li>
   {% for page in site.pages %}
   {% if page.permalink %}
