--- a/_includes/key.html
+++ b/_includes/key.html
@@ -10,6 +10,9 @@
     <span class="pixel hardware"></span> hardware
   </li>
   <li class="tags-key">
+    <span class="pixel writing"></span> writing
+  </li>
+  <li class="tags-key">
     <span class="pixel pm"></span> project managing
   </li>
   <li class="tags-key">
