--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,9 +5,7 @@
        id="exit-menu">close &#8594;</a>
   </li>
   <li class="d-xs-none d-sm-none d-md-block site-description">
-    {{ site.description | default: site.github.project_tagline }}'s
-    <br/>
-    projects & thoughts
+    Asya's projects <br/>& thoughts
   </li>
   {% for page in site.pages %}
   {% if page.permalink %}
