--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,56 +1,55 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <!-- Bootstrap JS -->
   <script src="{{ '/assets/js/bootstrap.js' }}"></script>
   <!-- custom -->
   <script src="{{ '/assets/js/menu.js' }}"></script>
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  <link rel="stylesheet"
-        href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <title>A stream of projects and thoughts</title>
+  <title>asya aizman's website</title>
+  <meta name="description" content="A stream of projects and thoughts" />
 </head>
 
 <body>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-11">
-      {% include header.html %}
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-11">
+        {% include header.html %}
+      </div>
+      <div class="col-1">
+        {% include lightmode.html %}
+      </div>
     </div>
-    <div class="col-1">
-      {% include lightmode.html %}
-    </div>
-  </div>
-  <div class="row">
-    <div class="" id="sidebar">
-      {% include nav.html %}
-      {% include key.html %}
-    </div>
-
-    <div class="main-content">
-      <div class="description-text">
-        {{ page.description }}
+    <div class="row">
+      <div class="" id="sidebar">
+        {% include nav.html %}
+        {% include key.html %}
       </div>
 
-      {% for image in page.images %}
-      <img src="/assets/img/{{image}}">
-      {% endfor %}
+      <div class="main-content">
+        <div class="description-text">
+          {{ page.description }}
+        </div>
+
+        {% for image in page.images %}
+        <img src="/assets/img/{{image}}">
+        {% endfor %}
+      </div>
     </div>
   </div>
-</div>
 </body>
+
 </html>
